# Samane_Dota

./: Admin.cpp  Admin.h  CMakeLists.txt  Course.cpp  Course.h  Git repository.txt  Person.cpp  Person.h  Professor.cpp  Professor.h  Student.cpp  Student.h  Untitled Diagram.drawio  homework.cpp  homework.h  main.cpp
